[REMOVE] Box preWrapWhiteSpace prop, no longer necessary [CLEAN] Package.json [IMP] Fixed search page styling

--- a/app/components/Box/Box.scss
+++ b/app/components/Box/Box.scss
@@ -14,7 +14,3 @@
 .Box__content {
   padding: $padding-base;
 }
-
-.Box__content-prewrapped {
-  white-space: pre-wrap;
-}
