--- a/app/components/shared/searchkit.scss
+++ b/app/components/shared/searchkit.scss
@@ -34,7 +34,7 @@
   &.is-focused {
     background-color: color('white');
 
-    .SearchBox__text {
+    .sk-search-box__text {
       color: color('grey', 'mid-dark');
 
       &::placeholder {
@@ -138,7 +138,7 @@
 }
 
 .sk-panel__header {
-  color: color('grey', 'dark');
+  color: color('blue');
   font-size: font-size();
   font-weight: 600;
   margin-bottom: 5px;
@@ -241,11 +241,11 @@
   justify-content: space-around;
 
   &__bar {
-    background: color('grey', 'mid-light');
+    background: color('transparent', 'x-dark');
     flex: 1;
 
     &.is-out-of-bounds {
-      background: color('grey', 'light');
+      background: color('transparent', 'dark');
     }
   }
 }
@@ -255,24 +255,23 @@
   position: relative;
   height: 4px;
   width: 100%;
-  border-radius: 6px;
-  background-color: #e9e9e9;
   box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: color('grey', 'light');
+
+  &-mark {
+    font-size: font-size('x-small');
+  }
 }
 
 .rc-slider * {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .rc-slider-track {
-  position: absolute;
-  left: 0;
+  background-color: color('grey');
   height: 4px;
-  border-radius: 6px;
-  background-color: #abe2fb;
-  z-index: 1;
+  left: 0;
+  position: absolute;
 }
 
 .rc-slider-handle {
@@ -282,109 +281,48 @@
   width: 14px;
   height: 14px;
   cursor: pointer;
-  border-radius: 50%;
-  border: solid 2px #96dbfa;
-  background-color: #fff;
+  border-radius: 100%;
+  border: solid 2px color('grey');
+  background-color: color('white');
   z-index: 2;
-}
 
-.rc-slider-handle:hover {
-  border-color: #57c5f7;
-}
-
-.rc-slider-handle-active:active {
-  border-color: #57c5f7;
-  box-shadow: 0 0 5px #57c5f7;
+  &:hover {
+    border-color: color('grey', 'mid-dark');
+  }
 }
 
 .rc-slider-mark {
-  position: absolute;
-  top: 10px;
-  left: 0;
+  padding-top: 10px;
+  display: flex;
   width: 100%;
   font-size: 12px;
   z-index: 3;
+
+  &-text {
+    color: color('grey', 'mid-light');
+    &-active {
+      color: color('grey', 'mid-dark');
+    }
+  }
 }
 
 .rc-slider-mark-text {
-  position: absolute;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
   cursor: pointer;
-  color: #999;
-}
-
-.rc-slider-mark-text-active {
-  color: #666;
-}
-
-.rc-slider-step {
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background: transparent;
-  z-index: 1;
-}
-
-.rc-slider-dot {
-  position: absolute;
-  top: -2px;
-  margin-left: -4px;
-  width: 8px;
-  height: 8px;
-  border: 2px solid #e9e9e9;
-  background-color: #fff;
-  cursor: pointer;
-  border-radius: 50%;
   vertical-align: middle;
-}
 
-.rc-slider-dot:first-child {
-  margin-left: -4px;
-}
-
-.rc-slider-dot:last-child {
-  margin-left: -4px;
-}
-
-.rc-slider-dot-active {
-  border-color: #96dbfa;
-}
-
-.rc-slider-disabled {
-  background-color: #e9e9e9;
-}
-
-.rc-slider-disabled .rc-slider-track {
-  background-color: #ccc;
-}
-
-.rc-slider-disabled .rc-slider-handle,
-.rc-slider-disabled .rc-slider-dot {
-  border-color: #ccc;
-  background-color: #fff;
-  cursor: not-allowed;
-}
-
-.rc-slider-disabled .rc-slider-mark-text,
-.rc-slider-disabled .rc-slider-dot {
-  cursor: not-allowed !important;
+  &:last-child {
+    text-align: right;
+  }
 }
 
 .rc-tooltip {
-  position: absolute;
+  border-radius: $border-radius-base;
+  box-sizing: border-box;
   left: -9999px;
+  position: absolute;
   top: -9999px;
-  z-index: 4;
   visibility: visible;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.rc-tooltip * {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  z-index: z(tooltip);
 }
 
 .rc-tooltip-hidden {
@@ -392,81 +330,33 @@
 }
 
 .rc-tooltip-placement-top {
-  padding: 4px 0 8px 0;
-}
+  color: color('white');
+  font-size: font-size('small');
+  padding: 4px 0 8px;
 
-.rc-tooltip-inner {
-  padding: 6px 2px;
-  min-width: 24px;
-  height: 24px;
-  font-size: 12px;
-  line-height: 1;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background-color: #6c6c6c;
-  border-radius: 6px;
-  box-shadow: 0 0 4px #d9d9d9;
-}
-
-.rc-tooltip-arrow {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-}
-
-.rc-tooltip-placement-top .rc-tooltip-arrow {
-  bottom: 4px;
-  left: 50%;
-  margin-left: -4px;
-  border-width: 4px 4px 0;
-  border-top-color: #6c6c6c;
-}
-
-
-// RC TOOLTIP/SLIDER CUSTOM CSS
-.rc-tooltip {
-  z-index: z(tooltip);
-}
-
-.rc-slider {
-  background-color: color('grey', 'light');
-
-  &-mark {
-    font-size: font-size('x-small');
-  }
-}
-
-.rc-slider-handle {
-  border-color: color('grey', 'mid-dark');
-
-  &:hover {
-    border-color: color('grey', 'x-dark');
-  }
-}
-
-.rc-slider-track {
-  background-color: color('grey', 'mid-dark');
-}
-
-.rc-slider-mark {
-  &-text {
-    &-active {
-      color: color('grey', 'dark');
-    }
-  }
-}
-
-.rc-tooltip-placement-top {
   .rc-tooltip-arrow {
     border-top-color: color('pink');
   }
 }
 
+.rc-tooltip-arrow {
+  border-color: transparent;
+  border-style: solid;
+  height: 0;
+  position: absolute;
+  width: 0;
+}
+
+.rc-tooltip-placement-top .rc-tooltip-arrow {
+  border-width: 4px 4px 0;
+  bottom: 4px;
+  left: 50%;
+  margin-left: -4px;
+}
+
 .rc-tooltip-inner {
   background-color: color('pink');
+  border-radius: $border-radius-base;
   box-shadow: none;
   box-sizing: border-box;
   padding: 6px 10px;
